Add parameters and other sweeping changes